# new_mjk_website

./: .gitignore  README.md  pyproject.toml
website/: __init__.py  api.py  database.py  views.py
website/templates/: base.html  galery.html
