[tool.poetry]
name = "new_mjk_website"
version = "0.1.0"
description = "New version of mjk-art website. Running as Flask app."
authors = ["Matthias Kasel <kubbixx@web.de>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
SQLAlchemy = "^1.4.40"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
